# diff2d

./: .gitignore  Cargo.toml  diff2d.ps1  flake.nix
src/: lcs.rs  main.rs  sqlite.rs
