[package]
name = "diff2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ndarray = "0.15.6"
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
rust_xlsxwriter = "0.58.0"
unicode-segmentation = "1.10.1"
